--- a/public/index.html
+++ b/public/index.html
@@ -11,12 +11,14 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>React App</title>
+    <title>Shoebox</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <script src="https://kit.fontawesome.com/1c5b0f06df.js" crossorigin="anonymous"></script>
-
+    <script
+      src="https://kit.fontawesome.com/1c5b0f06df.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
